<resources>
    <string name="app_name" translatable="false">Pigment</string>
    <string name="hex_Value" translatable="false">#424242</string>
    <string name="pointer" translatable="false">\u25B2</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="dialogMessage">Make sure you are in same network and the server component is running correctly.</string>
    <string name="dialogTitle">Please enter the IP of your Computer.</string>
    <string name="dialogHex1">Enter an hexadecimal color code</string>
    <string name="cancel">Cancel</string>
    <string name="swatch">Color Swatch</string>
    <string name="delete">Delete</string>
    <string name="add_swatches">Add actual swatch</string>
    <string name="replace">Replace swatches</string>
    <string name="wifi_warning_connection">Please connect to your network to establish a connection to Pigment-desktop.</string>
    <string name="wifi_warning_off">Please enable Wifi to connect with your network.</string>
    <string name="settings">Settings</string>
    <string name="timeout">Connection timed out. Is the IP-Adress correct?</string>
    <string name="an_error">An error occurred.</string>
    <string name="information" translatable="false">Information</string>
    <string name="overflow" translatable="false">overflow</string>
    <string name="info1">This application was designed to be used as color chooser and second interface while drawing, designing or editing photos on our computer, preferably with Photoshop. To make it work, you will need to install a second programm on your computer which you can download HERE.</string>
    <string name="dev">This app was developed by Mirko Sowa during the project \'App develepoment with Android\' at the SLG Aachen High School.</string>

</resources>
