<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_transfer"
        android:icon="@drawable/ic_transfer_round"
        android:title="@string/replace"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/add_swatches"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_connect"
        android:icon="@drawable/ic_cast_black_24dp"
        android:title="@string/connect"
        app:showAsAction="ifRoom"

        />
    <item
        android:id="@+id/action_info"
        android:title="@string/information"
        android:icon="@drawable/ic_info_outline_black_24dp"
        app:showAsAction="never" />

    <!-- <item
        android:id= "@+id/action_open"
        android:title="Stay open"
        android:checkable="true"
        app:showAsAction="never"
        />
 -->

</menu>